# Dlib-Android-Face-Landmark

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/example/dlibandroidfacelandmark/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dlib_face_result.cpp  dlib_utils.cpp  dlib_utils.hpp  native-lib.cpp
app/src/main/cpp/dlib/gui_core/: gui_core_kernel_2.h
app/src/main/java/com/example/dlibandroidfacelandmark/: DLibFrameProcessor.java  DLibResult.java  EditFaceActivity.java  Face.java  FaceDetectorOpenCv.java  FacePainter.java  GlobalVars.java  MainActivity.java  Position.java  Utils.java
app/src/main/res/layout/: activity_main.xml  edt_face_activity.xml
app/src/main/res/values/: edit_face_variables.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dlibandroidfacelandmark/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary3414/: build.gradle
openCVLibrary3414/src/main/: AndroidManifest.xml
openCVLibrary3414/src/main/java/org/opencv/android/: AsyncServiceHelper.java  BaseLoaderCallback.java
